third_party/move/move-compiler-v2/tests/ability-check/typing/borrow_local_temp_resource.exp

Diagnostics:
error: value of type `M::R` does not have the `drop` ability
  ┌─ tests/ability-check/typing/borrow_local_temp_resource.move:6:9
  │
6 │         &R{};
  │         ^^^^ implicitly dropped here since it is no longer used

error: value of type `M::R` does not have the `drop` ability
  ┌─ tests/ability-check/typing/borrow_local_temp_resource.move:7:9
  │
7 │         &mut R{};
  │         ^^^^^^^^ implicitly dropped here since it is no longer used
